[package]
name = "token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde = "1.0.134"
serde_json = "1.0.75"
tokio = { version = "1.15.0", features = [ "rt", "macros" ] }
